2009-02-15  Stan Cox  <scox@redhat.com>

	* systemtap.base/static_uprobes.exp: Test with both c++ and c.

2009-02-10  Will Cohen  <wcohen@redhat.com>
	
	* systemtap.examples/memory/kmalloc-top.meta: Correct testing commands.

2009-02-10  Will Cohen  <wcohen@redhat.com>

	* systemtap.samples/pfaults.exp:
	* systemtap.samples/pfaults.stp: Removed.
	* systemtap.examples/memory/pfaults.stp: Revised version from samples.
	* systemtap.examples/memory/pfaults.meta: New
	* systemtap.examples/index.html:
	* systemtap.examples/index.txt:
	* systemtap.examples/keyword-index.html:
	* systemtap.examples/keyword-index.txt: Regenerate.

2009-02-11  Tim Moore  <timoore@redhat.com>

	* systemtap.examples/profiling/latencytap.stp: Use _stp_stack_snprint_tsk.

2009-02-10  Will Cohen  <wcohen@redhat.com>

	* systemtap.samples/profile.exp:
	* systemtap.samples/profile.stp: Remove.
	
2009-02-10  Will Cohen  <wcohen@redhat.com>

	* systemtap.samples/crash.exp:
	* systemtap.samples/crash.sh: Move to systemtap.base directory.
	
2009-02-09  Will Cohen  <wcohen@redhat.com>

	* systemtap.samples/poll_map.exp:
	* systemtap.samples/poll_map.stp: Move to systemtap.base directory.
	
2009-02-09  Will Cohen  <wcohen@redhat.com>
	
	* systemtap.samples/kmalloc-top: Removed.
	* systemtap.examples/memory/kmalloc-top: Revised version from samples.
	* systemtap.examples/memory/kmalloc-top.meta: New
	* systemtap.examples/index.html:
	* systemtap.examples/index.txt:
	* systemtap.examples/keyword-index.html:
	* systemtap.examples/keyword-index.txt: Regenerate.

2009-02-06  Will Cohen  <wcohen@redhat.com>

	* systemtap.samples/iotask.stp:
	* systemtap.samples/iotask2.stp: Remove.
	* systemtap.examples/io/iostats.stp:
	* systemtap.examples/io/iostats.meta: New
	* systemtap.examples/index.html:
	* systemtap.examples/index.txt:
	* systemtap.examples/keyword-index.html:
	* systemtap.examples/keyword-index.txt: Regenerate.

2009-02-06  Will Cohen  <wcohen@redhat.com>

	* systemtap.samples/syscalls.stp: